delete property feature implemented

--- a/public/index.css
+++ b/public/index.css
@@ -152,7 +152,7 @@ li::marker{
 .modal{
     max-height: 0px;
     width: 90%;
-    height: 90%;
+    height: 80%;
     overflow: auto;
     transition: .3s;
     position: absolute;
@@ -252,13 +252,18 @@ li::marker{
     color: green;
     font-size: 18px;
 }
+
+/* add-parent */
 .add-parent{
-    /* border: 1px solid red; */
-    /* padding: 1rem; */
     display: none;
 }
+.head {
+    margin-bottom: 1rem;
+}
+.head p{
+    font-size: 14px;
+}
 .form{
-    /* border: 1px solid blue; */
     display: flex;
     justify-content: center;
     padding: 1rem;
@@ -290,7 +295,6 @@ li::marker{
     width: 30rem;
     padding: 1rem;
     border: none;
-    border-bottom: 2px solid rgb(61, 61, 61);
     box-shadow: 1px 1px 5px gray;
     background: transparent;
     transition: all .3s;
@@ -359,3 +363,4 @@ li::marker{
     background: var(--icon-hover-clr);
     cursor: default;
 }
+
