--- a/public/index.css
+++ b/public/index.css
@@ -11,7 +11,6 @@
     font-family: sans-serif;
 }
 body{
-    border: 1px solid;
     background-color: var(--body-clr);
 }
 .navbar{
@@ -23,7 +22,7 @@ h2{
     color: rgb(82, 82, 82);
 }
 .icon{
-    /* border: 1px solid; */
+    /* border: 1px solid red; */
     flex-shrink: 0;
     color: rgb(152, 116, 6);
     font-size: 1.4rem;
@@ -93,13 +92,13 @@ li::marker{
     content: '';
 }
 .main-content{
-    /* border: 1px solid green; */
     display: flex;
     flex-wrap: wrap;
-    height: 90vh;
+    min-height: 70vh;
     overflow-y: auto;
     padding: 1rem;
 }
+
 .main-content h2{
     font-weight: 500;
     width: 100%;
@@ -163,12 +162,16 @@ li::marker{
     z-index: 2;
 }
 .add-plus{
-    position: absolute;
-    font-size: 2.1rem;
-    padding: 1.4rem 1.6rem;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3.8rem;
+    margin-left: -1rem;
+    height: 6rem;
+    width: 6rem;
     background: var(--icon-clr);
     color: var(--nav-clr);
-    text-align: center;
     border-radius: 50%;
     cursor: pointer;
     right: 5%;
@@ -178,8 +181,8 @@ li::marker{
 }
 .add-plus:hover{
     color: white;
-    font-size: 2.6rem;
-    padding: 1.1rem 1.4rem;
+    font-size: 3rem;
+    /* padding: 1.1rem 1.4rem; */
 }
 .modal h1{
     text-align: right;
@@ -204,8 +207,6 @@ li::marker{
     /* border: 1px solid yellow; */
 }
 .modal-section{
-    /* border: 1px solid pink; */
-    /* color: white; */
     padding: 20px;
 }
 .modal-section img{
@@ -274,7 +275,12 @@ li::marker{
 .main-form{
     /* border: 1px solid blue; */
     padding: 1rem;
-    box-shadow: 5px 5px 15px gray;
+    /* box-shadow: 5px 5px 15px gray; */
+    background: rgb(253, 246, 233);
+}
+.add-parent .sidebar {
+    background-color: rgb(237, 234, 231);
+    padding: 1rem;
 }
 .inp{
     /* border: 1px solid yellow; */
@@ -295,10 +301,14 @@ li::marker{
     width: 30rem;
     padding: 1rem;
     border: none;
-    box-shadow: 1px 1px 5px gray;
+    /* box-shadow: 1px 1px 5px gray; */
+    border-bottom: 2px solid var(--icon-clr);
     background: transparent;
     transition: all .3s;
-    border-radius: 5px;
+    /* border-radius: 5px; */
+}
+.main-form input:focus{
+    outline: none;
 }
 .lbl{
     color: rgb(66, 66, 66);
@@ -364,3 +374,103 @@ li::marker{
     cursor: default;
 }
 
+.check-property{
+    padding: .5rem;
+    border: none;
+    background: var(--icon-clr);
+    color: #fff;
+    cursor: pointer;
+    width: 14rem;
+}
+.check-property:hover{
+    background: var(--icon-hover-clr);
+}
+.head p{
+    letter-spacing: 1px;
+    line-height: 25px;
+    color: gray;
+}
+.acc h3{
+    letter-spacing: 1px;
+    color: rgb(84, 84, 84);
+    padding: .6rem;
+    background: whitesmoke;
+    text-align: center;
+    border-radius: 50px;
+}
+.user-account-id{
+    padding: .5rem;
+    border: none;
+    border-bottom: 2px solid var(--icon-clr);
+    background: transparent;
+    display: block;
+    width: 14rem;
+    margin-bottom: 8px;
+    /* box-shadow: 2px 2px 8px gray; */
+}
+.user-account-id:focus{
+    outline: none;
+}
+
+
+/* footer style */
+footer {
+    background-color: #f2f2f2;
+    padding: 30px;
+    margin-top: 2rem;
+}
+
+footer h4 {
+    margin-bottom: .5rem;
+    color: #666;
+}
+
+footer p {
+    font-size: 14px;
+    color: #999;
+    padding-left: .4rem;
+}
+
+footer ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+footer ul li {
+    margin-bottom: 10px;
+    color: #666;
+}
+
+.fa{
+    margin-right: .6rem;
+}
+
+footer ul li a {
+    color: #666;
+    font-size: 14px;
+    text-decoration: none;
+}
+
+footer ul li a:hover {
+    text-decoration: underline;
+}
+
+footer hr {
+    border-top: 1px solid #ddd;
+}
+
+footer p.text-center {
+    margin-top: 20px;
+    font-size: 14px;
+    color: #999;
+}
+
+.custom-email{
+    text-decoration: none;
+    color: #666;
+}
+
+.property-location{
+    padding: 1rem 0;
+}
